manifests/apps/backend/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/instance: backend
    app.kubernetes.io/part-of: my-app
    app.openshift.io/runtime-version: latest
  name: backend
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: backend
    weight: 100
  wildcardPolicy: None
